fix: navbar covering up page content.
trim useless bottom margin from navbar

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -10,7 +10,6 @@
     align-items: center;
     transition: top 0.3s;
     padding: 50px 85px 50px 58px;
-    margin-bottom: 50px;
     background-color: white;
 
     &.hidden {
