--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -7,5 +7,6 @@
 }
 
 .contentWrapper {
+    padding-top: 160px;
     width: 100%;
 }
